Add sessions view and integrate metrics details

--- a/metrolix/templates/base.html
+++ b/metrolix/templates/base.html
@@ -25,9 +25,9 @@
 
   <div class="menu_bar"></div>
 
-  <a href="/dashboard/home">Home</a>
-  <a href="/dashboard/metrics_view">Metrics View</a>
-  <a href="/dashboard/session_view">Session View</a>
+  [<a href="/dashboard/home">Home</a>]
+  [<a href="/dashboard/metrics_view">Metrics View</a>]
+  [<a href="/dashboard/sessions_view">Sessions View</a>]
 
   <select id="projects_selector">
   {% for project in projects %}
