--- a/metrolix/templates/index.html
+++ b/metrolix/templates/index.html
@@ -2,4 +2,12 @@
 
 {%block content %}
 
+<h1>Metrolix home</h1>
+
+Select a project in the top selector
+
+<ul>
+<li><a href="/dashboard/metrics_view">View all metrics of a project, run comparisons</a></li>
+<li><a href="/dashboard/sessions_view">Examine reporting sessions</a></li>
+</ul>
 {%endblock %}
