* Add ability to delete session * Fix mismatch of metrics between projects * Add links to admin panel * Display session version info * Add a missing sort

--- a/metrolix/templates/index.html
+++ b/metrolix/templates/index.html
@@ -9,5 +9,6 @@ Select a project in the top selector
 <ul>
 <li><a href="/dashboard/metrics_view">View all metrics of a project, run comparisons</a></li>
 <li><a href="/dashboard/sessions_view">Examine reporting sessions</a></li>
+<li><a href="/admin">Manage Metrolix</a></li>
 </ul>
 {%endblock %}
