--- a/metrolix/templates/base.html
+++ b/metrolix/templates/base.html
@@ -28,6 +28,7 @@
   [<a href="/dashboard/home">Home</a>]
   [<a href="/dashboard/metrics_view">Metrics View</a>]
   [<a href="/dashboard/sessions_view">Sessions View</a>]
+  [<a href="/admin">Administration panel</a>]
 
   <select id="projects_selector">
   {% for project in projects %}
