--- a/metrolix/templates/index.html
+++ b/metrolix/templates/index.html
@@ -9,6 +9,7 @@ Select a project in the top selector
 <ul>
 <li><a href="/dashboard/metrics_view">View all metrics of a project, run comparisons</a></li>
 <li><a href="/dashboard/sessions_view">Examine reporting sessions</a></li>
+<li><a href="/dashboard/compare_metrics">Run custom comparisons accross metrics and sessions</a></li>
 <li><a href="/admin">Manage Metrolix</a></li>
 </ul>
 {%endblock %}
